# Adhan-C

./: CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: build-and-test.yml
src/: astronomical.c  astronomical.h  calculation_method.h  calculation_parameters.c  calculation_parameters.h  calendrical_helper.c  calendrical_helper.h  coordinates.h  double_utils.h  example.c  high_latitude_rule.h  madhab.h  prayer.h  prayer_adjustments.h  prayer_times.c  prayer_times.h  shadow.h  solar_coordinates.c  solar_coordinates.h  solar_time.c  solar_time.h
test/: Test.cpp  astronomical_test.cpp  calculation_method_test.cpp  calculation_parameters_test.cpp  double_utils_test.cpp  prayer_times_test.cpp  test_utils.h
